syntax = "proto3";
package spec;


service UnaryService {
    rpc Unary (UnaryRequest) returns (UnaryResponse);
}


message UnaryRequest {
    string question = 1;
}

message UnaryResponse {
    string answer = 1;
}
