syntax = "proto3";
package spec;


service ClientStreamingService {
    rpc ClientStream (stream ClientStreamRequest) returns (ClientStreamResponse);
}


message ClientStreamRequest {
    string question = 1;
}

message ClientStreamResponse {
    string answer = 1;
}
